WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
86415
[chromium] Prevent KeyCodeConversionAndroid from breaking on next NDK roll
https://bugs.webkit.org/show_bug.cgi?id=86415
Summary
[chromium] Prevent KeyCodeConversionAndroid from breaking on next NDK roll
Alexandre Elias
Reported
2012-05-14 17:05:28 PDT
[chromium] Prevent KeyCodeConversionAndroid from breaking on next NDK roll
Attachments
Patch
(1.81 KB, patch)
2012-05-14 17:08 PDT
,
Alexandre Elias
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexandre Elias
Comment 1
2012-05-14 17:08:35 PDT
Created
attachment 141818
[details]
Patch
Adam Barth
Comment 2
2012-05-14 17:10:31 PDT
Great!
WebKit Review Bot
Comment 3
2012-05-14 17:47:02 PDT
Comment on
attachment 141818
[details]
Patch Rejecting
attachment 141818
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: directory at Tools/Scripts/update-webkit line 118. Failed to run "['Tools/Scripts/update-webkit', '--chromium', '--force-update']" exit_code: 2 deps_parsed: True requirements: ('./',) Error: 'depot_tools/gclient sync --force --reset --delete_unversioned_trees' failed 3 tries and returned 256 at Tools/Scripts/update-webkit-chromium line 107. Re-trying 'depot_tools/gclient sync --force --reset --delete_unversioned_trees' No such file or directory at Tools/Scripts/update-webkit line 118. Full output:
http://queues.webkit.org/results/12682541
Alexandre Elias
Comment 4
2012-05-14 17:56:46 PDT
Comment on
attachment 141818
[details]
Patch Looks like bot burp, setting cq? again.
Adam Barth
Comment 5
2012-05-14 18:09:55 PDT
Comment on
attachment 141818
[details]
Patch Clearing flags on attachment: 141818 Committed
r117022
: <
http://trac.webkit.org/changeset/117022
>
Adam Barth
Comment 6
2012-05-14 18:10:00 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug